innerHTML ajax navigation window support etc

--- a/application/views/layouts/layout.phtml
+++ b/application/views/layouts/layout.phtml
@@ -1,12 +1,14 @@
 <?php echo $this->render('/layout/head.phtml') ?>
 <body>
 
+<div id="left">
 <div id="menu">
 <?php echo $this->render('/layout/menu.phtml'); ?>
 </div>
 
 <div id="navigation">
 <?php echo $this->render('/layout/navigation.phtml'); ?>
+</div>
 </div>
 
 <div id="content">
