--- a/application/views/scripts/layout/menu.phtml
+++ b/application/views/scripts/layout/menu.phtml
@@ -6,14 +6,15 @@
 <?php } ?>
 
 <?php if( $this->loggedIn == false ) { ?>
-    <a href="/user/login/">Login</a>
-    <a href="/user/register/">Register</a>
+    <a href="/user/login/"><img src="/images/login.png" alt="Login" title="Login" /></a>
+    <a href="/user/register/"><img src="/images/register.png" alt="Register" title="Register" /></a>
 <?php } else { ?>
-    <a href="/user/logout/">Logout</a>
-    <a href="/project/new/">New Project</a>
-    <a href="/project/join/">Join Project</a>
-    <a href="/project/select/">Select Project</a>
+    <a href="/user/logout/"><img src="/images/logout.png" alt="Logout" title="Logout" /></a>
+    <a href="/project/new/"><img src="/images/newpro.png" alt="New Project" title="New Project" /></a>
+    <a href="/project/join/"><img src="/images/join.png" alt="Join Project" title="Join Project"/></a>
+    <a href="/project/select/"><img src="/images/open.png" alt="Select Project" title="Select Project" /></a>
 <?php } ?>
 <?php if( $this->active == true ) { ?>
-    <a href="#" onclick="showNewFile();">New file</a>
+    <a href="#" onclick="showNewFile();"><img src="/images/newfile.png" alt="New file" title="New file" /></a>
+    <a href="#" onclick="showNewDir();"><img src="/images/newdir.png" alt="New dir" title="New dir" /></a>
 <?php } ?>
