Newly created files now added to git index

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -15,7 +15,7 @@
 <p>
 <input type="submit" name="save" value="Save" />
 <input type="submit" name="commit" value="Commit" />
-<input type="text" name="commitMessage" class="inputtext" />
+<input type="text" name="commitMessage" id="commitMessage" class="inputtext" />
 </p>
 </form>
 <?php echo $this->result; ?>
