Storage refactoring in progress

--- a/application/views/scripts/layout/navigation.phtml
+++ b/application/views/scripts/layout/navigation.phtml
@@ -1,4 +1,10 @@
 <div class="title">
+<?php echo $this->escape($this->branch) ?>
+</div>
+<ul class="list">
+
+</ul>
+<div class="title">
 <?php echo $this->escape($this->path) ?>
 </div>
 <ul class="list">
