--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -8,11 +8,8 @@ body {
 
 h1{
     color: #527bbd;
-    font-family: sans-serif;
     margin-top: 1.2em;
     margin-bottom: 0.5em;
-    line-height: 1.3;
-    border-bottom: 0.2px solid silver;
 }
 
 div.title{
@@ -26,21 +23,20 @@ div.title{
 
 #newfile, #newdir{
     position:absolute;
-    top: 150px;
-    left: 150px;
+    top: 15px;
+    left: 15px;
     width: 150px;
     background-color: #ffffff;
     border: 1px solid #000000;
     z-index: 100;
 }
 
-#newfile #name-label, #newfile #name-element, #newdir #name-label, #newdir #name-element{
+#name-label, #name-element{
     margin: 10px;
 }
 
-#newfile #new-label, #newfile #cancel-label, #newfile #cancel-element, #newfile #new-element,
-#newfile #new, #newfile #cancel, #newdir #new-label, #newdir #cancel-label, #newdir #cancel-element,
-#newdir #new-element, #newdir #new, #newdir #cancel{
+#new-label, #cancel-label, #cancel-element, #new-element,
+#new, #cancel{
     margin: 0px;
     width: 60px;
     display: inline;
