--- a/application/views/layouts/layout.phtml
+++ b/application/views/layouts/layout.phtml
@@ -1,22 +1,16 @@
-<?php echo $this->render('/layout/head.phtml') ?>
+<?php echo $this->doctype(); ?>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Real Time Version Control System</title>
+    <link href="/css/style.css" media="screen" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="/js/codemirror/codemirror.js"></script>
+    <script type="text/javascript" src="/js/dojo/dojo.js"></script>
+    <script type="text/javascript" src="/js/scripts.js"></script>
+</head>
 <body>
-
-<div id="left">
-<div id="menu">
-<?php echo $this->render('/layout/menu.phtml'); ?>
-</div>
-
-<div id="navigation">
-<?php echo $this->render('/layout/navigation.phtml'); ?>
-</div>
-</div>
-
 <div id="content">
 <?php echo $this->layout()->content; ?>
-</div>
-
-<div id="footer">
-<?php echo $this->render('/layout/footer.phtml'); ?>
 </div>
 </body>
 </html>
