--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1,15 +1,25 @@
 body {
+    margin: 0;
+    padding: 0;
     font-size: 10pt;
-    border: 1px solid #d9d8d1;
+    background-color: #fff;
+    color: #000;
+}
+
+#content{
     margin: 10px;
-    background-color: #ffffff;
-    color: #000000;
+    padding: 10px;
+    border: 1px solid #d9d8d1;
 }
 
 h1{
-    color: #527bbd;
-    margin-top: 1.2em;
-    margin-bottom: 0.5em;
+    font-size: 18px;
+    display: block;
+    padding: 6px 8px;
+    font-weight: bold;
+    background-color: #000;
+    text-decoration: none;
+    color: #00ff00;
 }
 
 div.title{
@@ -21,6 +31,17 @@ div.title{
     color: #000000;
 }
 
+#loginWindow{
+    margin: 0 auto;
+    padding: 0;
+    width: 300px;
+    border: 1px solid #000000;
+}
+
+#loginWindow dl, #loginWindow img{
+    margin: 10px;
+}
+
 #newfile, #newdir{
     position:absolute;
     top: 15px;
@@ -30,18 +51,12 @@ div.title{
     border: 1px solid #000000;
     z-index: 100;
 }
-
-#name-label, #name-element{
-    margin: 10px;
-}
-
 #new-label, #cancel-label, #cancel-element, #new-element,
 #new, #cancel{
     margin: 0px;
     width: 60px;
     display: inline;
 }
-
 #newfile #name-element #name, #newdir #name-element #name{
     width: 120px;
 }
@@ -61,7 +76,7 @@ div.title{
     overflow: auto;
 }
 
-#content{
+#center{
     float: left;
     position: relative;
     width: 60%;
@@ -71,31 +86,24 @@ div.title{
     left:0;
     margin-left:0;
 }
-
 #navigation .file{
     list-style-image: url('/images/i-file.png');
 }
-
 #navigation .dir{
     list-style-image: url('/images/i-dir.png');
 }
-
 #navigation .updir{
     list-style-image: url('/images/i-up.png');
 }
-
 #codeBorder{
     border: 1px solid #d9d8d1;
 }
-
 #commitMessage{
     width: 60%;
 }
-
 #footer{
     clear: both;
 }
-
 .CodeMirror-line-numbers{
     font-family: monospace;
     font-size: 10pt;
@@ -103,11 +111,14 @@ div.title{
     padding: 0;
     color: #999999;
 }
-
+.loginMsg{
+    background-color: #000;
+    color: #aaa;
+    padding: 1px 10px;
+}
 .hidden{
     display: none;
 }
-
-#menu img {
+img {
     border: 0;
 }
