In progress of making updated project management

--- a/application/views/scripts/user/register.phtml
+++ b/application/views/scripts/user/register.phtml
@@ -1,4 +1,4 @@
-<div id="loginWindow">
+<div id="userWindow">
 <a href="/user/login/"><img src="/images/login.png" alt="Login" title="Login" /></a>
 <a href="/user/register/"><img src="/images/register.png" alt="Register" title="Register" /></a>
 <h1>Register</h1>
