--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,10 +1,19 @@
 <div id="left">
 <div id="menu">
-<?php echo $this->render('/layout/menu.phtml'); ?>
+<?php if($this->loggedIn) { ?>
+<span>User: <?php echo $this->loggedIn->name; ?></span><br />
+<?php } ?>
+<?php if($this->active) { ?>
+<span>Project: <?php echo $this->active->name; ?></span><br />
+<?php } ?>
+<a href="/user/logout/"><img src="/images/logout.png" alt="Logout" title="Logout" /></a>
+<a href="/project/new/"><img src="/images/newpro.png" alt="New Project" title="New Project" /></a>
+<a href="#" onclick="showNewFile();"><img src="/images/newfile.png" alt="New file" title="New file" /></a>
+<a href="#" onclick="showNewDir();"><img src="/images/newdir.png" alt="New dir" title="New dir" /></a>
 </div>
 
 <div id="navigation">
-<?php echo $this->render('/layout/navigation.phtml'); ?>
+<?php include 'navigation.phtml' ?>
 </div>
 </div>
 
@@ -40,5 +49,4 @@ dojo.addOnLoad(init);
 </div>
 
 <div id="footer">
-<?php echo $this->render('/layout/footer.phtml'); ?>
 </div>
