--- a/application/views/scripts/ajax/newfile.phtml
+++ b/application/views/scripts/ajax/newfile.phtml
@@ -1,3 +1,3 @@
 <div id="navigation">
-<?php echo $this->render('/layout/navigation.phtml'); ?>
+<?php echo $this->render('/index/navigation.phtml'); ?>
 </div>
