--- a/application/views/scripts/index/navigation.phtml
+++ b/application/views/scripts/index/navigation.phtml
@@ -2,8 +2,15 @@
 <?php echo $this->escape($this->branch) ?>
 </div>
 <ul class="list">
-
+<?php
+if( count($this->branches) > 0 )
+    foreach( $this->branches as $branch )
+    {
+        echo '<li class="branch"><a href=?branch="'.urlencode( $branch ).'">'.$this->escape($branch)."</a></li>\n";
+    }
+?>
 </ul>
+
 <div class="title">
 <?php echo $this->escape($this->path) ?>
 </div>
