--- a/application/views/scripts/index/navigation.phtml
+++ b/application/views/scripts/index/navigation.phtml
@@ -1,6 +1,7 @@
 <div class="title">
-<?php echo $this->escape($this->branch) ?>
+<p><?php echo $this->escape($this->branch) ?></p>
 </div>
+
 <ul class="list">
 <?php
 if( count($this->branches) > 0 )
@@ -12,7 +13,7 @@ if( count($this->branches) > 0 )
 </ul>
 
 <div class="title">
-<?php echo $this->escape($this->path) ?>
+<p><?php echo $this->escape($this->path) ?></p>
 </div>
 <ul class="list">
 <?php if( strlen($this->path) > 1 ) {?>
