--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -21,7 +21,6 @@
 </div>
 
 <div id="center">
-
 <div id="newfile" class="hidden">
 <img src="/images/newfile.png" alt="New file" />
 <?php echo $this->newFileForm ?>
@@ -54,6 +53,10 @@
 dojo.addOnLoad(init);
 //]]>
 </script>
+
+</div>
+
+<div id="right">
 
 </div>
 
