--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -110,6 +110,11 @@ div.title p{
     width: 60%;
 }
 
+#left{
+    float: left;
+    position: relative;
+}
+
 #navigation .list{
     left:0;
     margin-left:0;
