Fixed parameter passing and cloning in Git.php

--- a/application/views/scripts/index/navigation.phtml
+++ b/application/views/scripts/index/navigation.phtml
@@ -1,5 +1,5 @@
 <div class="title">
-<p><?php echo $this->escape($this->path) ?></p>
+<p>Path: <?php echo $this->escape($this->path) ?></p>
 </div>
 <ul class="list">
 <?php if( strlen($this->path) > 1 ) {?>
