RawIO now uses SessionStorage model

--- a/application/views/scripts/index/merging.phtml
+++ b/application/views/scripts/index/merging.phtml
@@ -1,6 +1,4 @@
-<div class="title">
-<p>Local Merge</p>
-</div>
+<div class="title"><p>Merge with</p></div>
 <ul class="list">
 <?php
 if( count($this->branches) > 0 )
