--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -126,6 +126,7 @@ div.title p{
 #navigation .file{list-style-image: url('/images/i-file.png');}
 #navigation .dir{list-style-image: url('/images/i-dir.png');}
 #navigation .updir{list-style-image: url('/images/i-up.png');}
+#merger .merge{list-style-image: url('/images/i-merge.png');}
 #projectList{list-style-image: url('/images/i-project.png');}
 #codeBorder{
     border: 1px solid #d9d8d1;
