--- a/application/views/scripts/index/merger.phtml
+++ b/application/views/scripts/index/merger.phtml
@@ -1,4 +1,4 @@
-<div class="title"><p>Merge</p><p>Local branches</p></div>
+<div class="title"><p>Merge</p><p>Local branches:</p></div>
 <ul class="list">
 <?php
 if( count($this->branches) > 0 )
@@ -16,7 +16,7 @@ if( count($this->branches) > 0 )
 ?>
 </ul>
 
-<div class="title"><p>Tracked remotes</p></div>
+<div class="title"><p>Pull</p><p>Tracked remote branches:</p></div>
 <ul class="list">
 <?php
 if( count($this->remotes) > 0 )
@@ -31,7 +31,7 @@ if( count($this->remotes) > 0 )
 ?>
 </ul>
 
-<div class="title"><p>Available remote sources</p></div>
+<div class="title"><p>Add remote</p><p>Available remote sources:</p></div>
 
 <ul class="list">
 <?php
