--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -59,6 +59,8 @@
 <?php include 'merger.phtml' ?>
 </div>
 
+<img id="loader" class="hidden" src="/images/loader.gif" alt="Loading" />
+
 </div>
 
 <div id="footer">
