Status initial work

--- a/application/views/scripts/index/merger.phtml
+++ b/application/views/scripts/index/merger.phtml
@@ -1,3 +1,8 @@
+<div class="title"><p>Status</p><p>Recent actions</p></div>
+<ul class="list" id="status">
+<li class="status"><p>test</p></li>
+</ul>
+
 <div class="title"><p>Merge</p><p>Local branches:</p></div>
 <ul class="list" id="locals">
 <?php
