--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -37,7 +37,7 @@
 </div>
 
 <div class="title">
-<p><?php echo $this->escape( $this->path . $this->editing ); ?></p>
+<p id="filename"><?php echo $this->escape( $this->path . $this->editing ); ?></p>
 </div>
 <form id="editorForm" method="post" action="/">
 <div id="codeBorder">
