More detailed status updates logout etc

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -141,7 +141,7 @@ div.title p{
 #commitMessage{
     width: 60%;
 }
-#footer{
+#footer, #commitinfo{
     clear: both;
 }
 .CodeMirror-line-numbers{
