Styling state display

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -49,10 +49,12 @@
 <input type="text" name="commitMessage" id="commitMessage" class="inputtext" />
 </p>
 </form>
+<div id="console">
 <pre>
 <?php echo $this->escape($this->result); ?>
 <?php echo $this->escape($this->state); ?>
 </pre>
+</div>
 </div>
 
 <div id="right">
